--- a/style.css
+++ b/style.css
@@ -1,11 +1,34 @@
-.form_recherche{
-   background-image: linear-gradient(rgba(83, 83, 83, 0.5), rgba(255, 17, 0, 0.315)),
-                  url("bg form de recherche.png");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+
+body{
+    font-family: 'Roboto', sans-serif;
+
+    background-image: linear-gradient(rgba(187, 184, 184, 0.281), rgba(255, 17, 0, 0.897));
+    margin: 0;
+    padding: 0;
+    
 }
+h1,h2,h3,h4,h5{
+    font-weight: 500;
+    line-height: 24px;
+}
+/*header*/
+/* header{
+    margin: 0;
+    padding: 0;
+} */
+
+.form_recherche{
+background-image: linear-gradient(rgba(187, 184, 184, 0.616), rgba(255, 17, 0, 0.897)),
+url(bg\ form\ de\ recherche.png);
+}
+/***********************************************************/
+
 .bg_form{
     margin: 10px;
     background: white;
-    border-radius: 25% 10%;
+    border-radius: 25px;
     opacity: 0.8;
 }
 .bg_form_img{
@@ -14,3 +37,13 @@
     border-radius: 25% 10%;
     
 }
+
+/*pied de page */
+
+
+
+.container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl{
+     margin: 0;
+    padding: 0;
+}
+/***********************************************************/
